// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > renders correctly with autoresize 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base resize-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="v-0"
      rows="3"
      style=""
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with class 1`] = `
<div>
  <div
    class="inline-flex items-center absolute"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="v-0"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with disabled 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      disabled=""
      id="v-0"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with id 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="id"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with rows 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="v-0"
      rows="5"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with size lg 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="v-0"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with size md 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-1.5 px-2.5 py-1.5 text-sm focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="v-0"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with size sm 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-1 px-2 py-1 text-xs focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="v-0"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with ui 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset rounded-full"
      id="v-0"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly within FormField 1`] = `
<div>
  <div
    class="text-base"
  >
    <div
      class=""
    >
      <div
        class="flex items-center justify-between gap-1"
      >
        <label
          class="block font-medium text-default"
          for="v-0"
          id="v-0-label"
        >
          
          Label
          
        </label>
        <span
          class="text-muted"
          id="v-0-hint"
        >
          Hint
        </span>
      </div>
      <p
        class="text-muted"
        id="v-0-description"
      >
        Description
      </p>
    </div>
    <div
      class="mt-1"
    >
      
      <div
        class="relative inline-flex items-center"
      >
        <textarea
          aria-describedby="v-0-hint v-0-description v-0-help"
          class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
          id="v-0"
          rows="3"
        />
      </div>
      
      <p
        class="mt-1 text-muted"
        id="v-0-help"
      >
        Help
      </p>
    </div>
  </div>
</div>
`;
